--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -103,20 +103,29 @@
 	│   ├── <a href="././S07-Multiplications-Divisions/Ex-4a-S07-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-4a-S07-Problèmes.pdf</a><br>
 	│   ├── <a href="././S07-Multiplications-Divisions/ex-division-decimales_01.pdf">ex-division-decimales_01.pdf</a><br>
 	│   └── <a href="././S07-Multiplications-Divisions/pblm-6-div.pdf">pblm-6-div.pdf</a><br>
-	└── <a href="././S08-Rapporteur/">S08-Rapporteur</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/cours-Rapporteur.pdf">cours-Rapporteur.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/Cours-S08-Rapporteurs.pdf">Cours-S08-Rapporteurs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/DS1-Angles-Rapporteurs.pdf">DS1-Angles-Rapporteurs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/DS-1-S08-Angles.pdf">DS-1-S08-Angles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/DS-Formative-S08-Angles.pdf">DS-Formative-S08-Angles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-5-S05.pdf">FA1-5-S05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/FA1-6-S17.pdf">FA1-6-S17.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_94.pdf">pg_94.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_95.pdf">pg_95.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_96.pdf">pg_96.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_97.pdf">pg_97.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Rapporteur/pg_98.pdf">pg_98.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
+	├── <a href="././S08-Rapporteur/">S08-Rapporteur</a><br>
+	│   ├── <a href="././S08-Rapporteur/cours-Rapporteur.pdf">cours-Rapporteur.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/Cours-S08-Rapporteurs.pdf">Cours-S08-Rapporteurs.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/DS1-Angles-Rapporteurs.pdf">DS1-Angles-Rapporteurs.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/DS-1-S08-Angles.pdf">DS-1-S08-Angles.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/DS-Formative-S08-Angles.pdf">DS-Formative-S08-Angles.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/FA1-5-S05.pdf">FA1-5-S05.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/FA1-6-S17.pdf">FA1-6-S17.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/pg_94.pdf">pg_94.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/pg_95.pdf">pg_95.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/pg_96.pdf">pg_96.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/pg_97.pdf">pg_97.pdf</a><br>
+	│   ├── <a href="././S08-Rapporteur/pg_98.pdf">pg_98.pdf</a><br>
+	│   └── <a href="././S08-Rapporteur/pg_99.pdf">pg_99.pdf</a><br>
+	├── <a href="././S09-Proportionalite/">S09-Proportionalite</a><br>
+	│   └── <a href="././S09-Proportionalite/DS-1-S09-Problemes.pdf">DS-1-S09-Problemes.pdf</a><br>
+	└── <a href="././S10-tableaux-graphiques/">S10-tableaux-graphiques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FA-6-S05/">FA-6-S05</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05/">FM-6-S05</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05-Version-Eleve/">FM-6-S05-Version-Eleve</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FA-6-S05.pdf">FA-6-S05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S10-tableaux-graphiques/FM-6-S05.pdf">FM-6-S05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S10-tableaux-graphiques/FM-6-S05-VE.pdf">FM-6-S05-VE.pdf</a><br>
 	<hr>
 </body>
 </html>
