--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -76,23 +76,25 @@
 	│   └── <a href="././S06-Fonctions-exponentielles/fonction_exponentielle_exercices.pdf">fonction_exponentielle_exercices.pdf</a><br>
 	├── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/">S07-Primitive-Intégration</a><br>
 	│   └── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
-	└── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS/">DS</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_03.pdf">Ex-1-S08-Rappels_03.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels.pdf">Ex-1-S08-Rappels.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_01.pdf">Ex-2a-S08-Point-moyen_01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3a-S08-Covariance.pdf">Ex-3a-S08-Covariance.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3b-S08-Variance-ecart-type.pdf">Ex-3b-S08-Variance-ecart-type.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-4a-S08-Regression.pdf">Ex-4a-S08-Regression.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
+	├── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
+	│   ├── <a href="././S08-Statistiques/DS/">DS</a><br>
+	│   ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_03.pdf">Ex-1-S08-Rappels_03.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels.pdf">Ex-1-S08-Rappels.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_01.pdf">Ex-2a-S08-Point-moyen_01.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-3a-S08-Covariance.pdf">Ex-3a-S08-Covariance.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-3b-S08-Variance-ecart-type.pdf">Ex-3b-S08-Variance-ecart-type.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Ex-4a-S08-Regression.pdf">Ex-4a-S08-Regression.pdf</a><br>
+	│   ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
+	│   └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
+	└── <a href="././S09-Logarithmes/">S09-Logarithmes</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S09-Logarithmes/Cours-Logarithmes.pdf">Cours-Logarithmes.pdf</a><br>
 	<hr>
 </body>
 </html>
