--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -127,11 +127,12 @@
 	│   ├── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_01.pdf">Ex-5-S08-Problemes_01.pdf</a><br>
 	│   ├── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_02.pdf">Ex-5-S08-Problemes_02.pdf</a><br>
 	│   └── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_03.pdf">Ex-5-S08-Problemes_03.pdf</a><br>
-	└── <a href="././S09-Operations-Fractions/">S09-Operations-Fractions</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S09-Operations-Fractions/Ex-3a-S09-additions-soustractions.pdf">Ex-3a-S09-additions-soustractions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S09-Operations-Fractions/FA1-4-S04-fractions-%FFFFFFC3%FFFFFFA9gales.pdf">FA1-4-S04-fractions-égales.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S09-Operations-Fractions/FA2-4-S04-addition-fractions.pdf">FA2-4-S04-addition-fractions.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S09-Operations-Fractions/FM-S04-4-Fraction.pdf">FM-S04-4-Fraction.pdf</a><br>
+	├── <a href="././S09-Operations-Fractions/">S09-Operations-Fractions</a><br>
+	│   ├── <a href="././S09-Operations-Fractions/Ex-3a-S09-additions-soustractions.pdf">Ex-3a-S09-additions-soustractions.pdf</a><br>
+	│   ├── <a href="././S09-Operations-Fractions/FA1-4-S04-fractions-%FFFFFFC3%FFFFFFA9gales.pdf">FA1-4-S04-fractions-égales.pdf</a><br>
+	│   ├── <a href="././S09-Operations-Fractions/FA2-4-S04-addition-fractions.pdf">FA2-4-S04-addition-fractions.pdf</a><br>
+	│   └── <a href="././S09-Operations-Fractions/FM-S04-4-Fraction.pdf">FM-S04-4-Fraction.pdf</a><br>
+	└── <a href="././FA-01-S02-Fractions.pdf">FA-01-S02-Fractions.pdf</a><br>
 	<hr>
 </body>
 </html>
