--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -129,9 +129,14 @@
 	│   └── <a href="././S08-Proportionnalite/Ex-5-S08-Problemes_03.pdf">Ex-5-S08-Problemes_03.pdf</a><br>
 	├── <a href="././S09-Operations-Fractions/">S09-Operations-Fractions</a><br>
 	│   ├── <a href="././S09-Operations-Fractions/Ex-3a-S09-additions-soustractions.pdf">Ex-3a-S09-additions-soustractions.pdf</a><br>
+	│   ├── <a href="././S09-Operations-Fractions/Ex-4-S09-Enchainement.pdf">Ex-4-S09-Enchainement.pdf</a><br>
 	│   ├── <a href="././S09-Operations-Fractions/FA1-4-S04-fractions-%FFFFFFC3%FFFFFFA9gales.pdf">FA1-4-S04-fractions-égales.pdf</a><br>
 	│   ├── <a href="././S09-Operations-Fractions/FA2-4-S04-addition-fractions.pdf">FA2-4-S04-addition-fractions.pdf</a><br>
 	│   └── <a href="././S09-Operations-Fractions/FM-S04-4-Fraction.pdf">FM-S04-4-Fraction.pdf</a><br>
+	├── <a href="././S10-Calcul-litteral/">S10-Calcul-litteral</a><br>
+	│   ├── <a href="././S10-Calcul-litteral/4eme-calcul-litteral.pdf">4eme-calcul-litteral.pdf</a><br>
+	│   ├── <a href="././S10-Calcul-litteral/cours 4 litteral.pdf">cours 4 litteral.pdf</a><br>
+	│   └── <a href="././S10-Calcul-litteral/Cours-S10-Calcul-Litteral.pdf">Cours-S10-Calcul-Litteral.pdf</a><br>
 	└── <a href="././FA-01-S02-Fractions.pdf">FA-01-S02-Fractions.pdf</a><br>
 	<hr>
 </body>
