--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -137,7 +137,8 @@
 	│   ├── <a href="././S10-Calcul-litteral/4eme-calcul-litteral.pdf">4eme-calcul-litteral.pdf</a><br>
 	│   ├── <a href="././S10-Calcul-litteral/cours 4 litteral.pdf">cours 4 litteral.pdf</a><br>
 	│   ├── <a href="././S10-Calcul-litteral/Cours-S10-Calcul-Litteral.pdf">Cours-S10-Calcul-Litteral.pdf</a><br>
-	│   └── <a href="././S10-Calcul-litteral/Ex-1a-S10-Calcul-expressions-litterales.pdf">Ex-1a-S10-Calcul-expressions-litterales.pdf</a><br>
+	│   ├── <a href="././S10-Calcul-litteral/Ex-1a-S10-Calcul-expressions-litterales.pdf">Ex-1a-S10-Calcul-expressions-litterales.pdf</a><br>
+	│   └── <a href="././S10-Calcul-litteral/Ex-2a-S10-Distribuer.pdf">Ex-2a-S10-Distribuer.pdf</a><br>
 	└── <a href="././FA-01-S02-Fractions.pdf">FA-01-S02-Fractions.pdf</a><br>
 	<hr>
 </body>
