--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -27,16 +27,17 @@
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
-	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions pos%FFFFFFC3%FFFFFFA9es.pdf">FA-S01-6-additions posées.pdf</a><br>
-	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%FFFFFFC3%FFFFFFA9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
-	├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Géométrie</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
-	│   └── <a href="././S02-Notions-de-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Num%FFFFFFC3%FFFFFFA9ration.pdf">Ex-1-Numération.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions posees.pdf">FA-S01-6-additions posees.pdf</a><br>
+	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Numeration-entiere.pdf">FM-S01-6-Numeration-entiere.pdf</a><br>
+	├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Geométrie</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
+	│   └── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
 	├── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
 	│   ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	│   ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
