--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<a href="././index.html">.</a><br>
 	├── <a href="././Cinquieme/index.html">Cinquieme</a><br>
 	├── <a href="././Premiere/index.html">Premiere</a><br>
+	├── <a href="././Quatrieme/index.html">Quatrieme</a><br>
 	├── <a href="././Sixieme/index.html">Sixieme</a><br>
 	└── <a href="././Terminale/index.html">Terminale</a><br>
 	<hr>
