--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -27,7 +27,7 @@
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
-	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Num%FFFFFFC3%FFFFFFA9ration.pdf">Ex-1-Numération.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Numeration.pdf">Ex-1-Numeration.pdf</a><br>
 	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions posees.pdf">FA-S01-6-additions posees.pdf</a><br>
 	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Numeration-entiere.pdf">FM-S01-6-Numeration-entiere.pdf</a><br>
 	├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Geométrie</a><br>
