--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -27,29 +27,29 @@
 	<h1>Cours de Maths/Quatrieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././S01-Relatifs/">S01-Relatifs</a><br>
-	│   ├── <a href="././S01-Relatifs/DS1-4-S01.pdf">DS1-4-S01.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/Ex-1-Relatifs.pdf">Ex-1-Relatifs.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/FA2-4-S01-Addition.pdf">FA2-4-S01-Addition.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/FA3-4-S01-Soustraction.pdf">FA3-4-S01-Soustraction.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/FA4-4-S01-Mixte.pdf">FA4-4-S01-Mixte.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/FA-4-S01-Introduction.pdf">FA-4-S01-Introduction.pdf</a><br>
-	│   ├── <a href="././S01-Relatifs/FA5-4-S01-Problemes.pdf">FA5-4-S01-Problemes.pdf</a><br>
-	│   └── <a href="././S01-Relatifs/FM-4-S01.pdf">FM-4-S01.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Cours-4-S01-Relatifs-Rappels.pdf">Cours-4-S01-Relatifs-Rappels.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/DS-4-S01-Relatifs-Rappels.pdf">DS-4-S01-Relatifs-Rappels.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-1a-Relatifs-Rappels-Comparer-Ranger.pdf">Ex-1a-Relatifs-Rappels-Comparer-Ranger.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-1b-Relatifs-Rappels-Comparer.pdf">Ex-1b-Relatifs-Rappels-Comparer.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-2-Relatifs-Additions.pdf">Ex-2-Relatifs-Additions.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-3-Relatifs-Soustraction.pdf">Ex-3-Relatifs-Soustraction.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-4-Relatifs-Melange.pdf">Ex-4-Relatifs-Melange.pdf</a><br>
+	│   └── <a href="././S01-Relatifs/Ex-5-Relatifs-Problemes.pdf">Ex-5-Relatifs-Problemes.pdf</a><br>
 	├── <a href="././S02-Pythagore/">S02-Pythagore</a><br>
-	│   ├── <a href="././S02-Pythagore/DS1-4-S02.pdf">DS1-4-S02.pdf</a><br>
-	│   └── <a href="././S02-Pythagore/FM-4-S02.pdf">FM-4-S02.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Cours-4-S02-Pythagore.pdf">Cours-4-S02-Pythagore.pdf</a><br>
+	│   └── <a href="././S02-Pythagore/DS1-4-S02-Pythagore.pdf">DS1-4-S02-Pythagore.pdf</a><br>
 	├── <a href="././S03-Produits-de-Relatifs/">S03-Produits-de-Relatifs</a><br>
-	│   ├── <a href="././S03-Produits-de-Relatifs/FA3-4-S03-signe-produit.pdf">FA3-4-S03-signe-produit.pdf</a><br>
-	│   └── <a href="././S03-Produits-de-Relatifs/FA4-4-S01-Mixte.pdf">FA4-4-S01-Mixte.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/Ex-1-Relatifs-Signe-Du-Produit.pdf">Ex-1-Relatifs-Signe-Du-Produit.pdf</a><br>
+	│   └── <a href="././S03-Produits-de-Relatifs/Ex-2-Relatifs-Additions-Soustractions.pdf">Ex-2-Relatifs-Additions-Soustractions.pdf</a><br>
 	├── <a href="././S04-fractions/">S04-fractions</a><br>
-	│   ├── <a href="././S04-fractions/FA1-4-S04-fractions-egales.pdf">FA1-4-S04-fractions-egales.pdf</a><br>
-	│   ├── <a href="././S04-fractions/FA2-4-S04-addition-fractions.pdf">FA2-4-S04-addition-fractions.pdf</a><br>
-	│   └── <a href="././S04-fractions/FM-S04-4-Fraction.pdf">FM-S04-4-Fraction.pdf</a><br>
+	│   ├── <a href="././S04-fractions/Cours-4-S04-Operation-sur-les-Fractions.pdf">Cours-4-S04-Operation-sur-les-Fractions.pdf</a><br>
+	│   ├── <a href="././S04-fractions/Ex-1-Fractions-Egales.pdf">Ex-1-Fractions-Egales.pdf</a><br>
+	│   └── <a href="././S04-fractions/Ex-2-Fractions-Additions-Soustractions.pdf">Ex-2-Fractions-Additions-Soustractions.pdf</a><br>
 	├── <a href="././S05-Pythagore-reciproque/">S05-Pythagore-reciproque</a><br>
-	│   ├── <a href="././S05-Pythagore-reciproque/4-S5-DS1.pdf">4-S5-DS1.pdf</a><br>
-	│   ├── <a href="././S05-Pythagore-reciproque/FA1-4-FA1-4-S05-rappels-egalite.pdf">FA1-4-FA1-4-S05-rappels-egalite.pdf</a><br>
-	│   ├── <a href="././S05-Pythagore-reciproque/FA1-4-S05-rappels-egalite.pdf">FA1-4-S05-rappels-egalite.pdf</a><br>
-	│   └── <a href="././S05-Pythagore-reciproque/FM-S05-4.pdf">FM-S05-4.pdf</a><br>
+	│   ├── <a href="././S05-Pythagore-reciproque/Cours-4-S05-Reciproque-Pythagore.pdf">Cours-4-S05-Reciproque-Pythagore.pdf</a><br>
+	│   ├── <a href="././S05-Pythagore-reciproque/DSA-4-S05-Reciproque-Pythagore.pdf">DSA-4-S05-Reciproque-Pythagore.pdf</a><br>
+	│   ├── <a href="././S05-Pythagore-reciproque/Ex-1-Rappels-Egalite.pdf">Ex-1-Rappels-Egalite.pdf</a><br>
+	│   └── <a href="././S05-Pythagore-reciproque/Ex-1-Rappels.pdf">Ex-1-Rappels.pdf</a><br>
 	├── <a href="././S06-Satistiques/">S06-Satistiques</a><br>
 	│   ├── <a href="././S06-Satistiques/stats-etendues.pdf">stats-etendues.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/stats-medianes.pdf">stats-medianes.pdf</a><br>
