--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -31,6 +31,7 @@
 	│   ├── <a href="././S01-Relatifs/DS-4-S01-Relatifs-Rappels.pdf">DS-4-S01-Relatifs-Rappels.pdf</a><br>
 	│   ├── <a href="././S01-Relatifs/Ex-1a-Relatifs-Rappels-Comparer-Ranger.pdf">Ex-1a-Relatifs-Rappels-Comparer-Ranger.pdf</a><br>
 	│   ├── <a href="././S01-Relatifs/Ex-1b-Relatifs-Rappels-Comparer.pdf">Ex-1b-Relatifs-Rappels-Comparer.pdf</a><br>
+	│   ├── <a href="././S01-Relatifs/Ex-1-Relatifs.pdf">Ex-1-Relatifs.pdf</a><br>
 	│   ├── <a href="././S01-Relatifs/Ex-2-Relatifs-Additions.pdf">Ex-2-Relatifs-Additions.pdf</a><br>
 	│   ├── <a href="././S01-Relatifs/Ex-3-Relatifs-Soustraction.pdf">Ex-3-Relatifs-Soustraction.pdf</a><br>
 	│   ├── <a href="././S01-Relatifs/Ex-4-Relatifs-Melange.pdf">Ex-4-Relatifs-Melange.pdf</a><br>
