--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -27,9 +27,11 @@
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
-	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Numeration.pdf">Ex-1-Numeration.pdf</a><br>
-	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions posees.pdf">FA-S01-6-additions posees.pdf</a><br>
-	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Numeration-entiere.pdf">FM-S01-6-Numeration-entiere.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Cours-6-S01-Numeration-entiere.pdf">Cours-6-S01-Numeration-entiere.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Ex-1-Numeration-Decomposition.pdf">Ex-1-Numeration-Decomposition.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Ex-2-Numeration-Chiffre-Des.pdf">Ex-2-Numeration-Chiffre-Des.pdf</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/Ex-3-Numeration-Ecriture.pdf">Ex-3-Numeration-Ecriture.pdf</a><br>
+	│   └── <a href="././S01-Numeration-entiere/Ex-4-Numeration-Additions.pdf">Ex-4-Numeration-Additions.pdf</a><br>
 	├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Geométrie</a><br>
 	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
 	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
