--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -32,14 +32,14 @@
 	│   ├── <a href="././S01-Numeration-entiere/Ex-2-Numeration-Chiffre-Des.pdf">Ex-2-Numeration-Chiffre-Des.pdf</a><br>
 	│   ├── <a href="././S01-Numeration-entiere/Ex-3-Numeration-Ecriture.pdf">Ex-3-Numeration-Ecriture.pdf</a><br>
 	│   └── <a href="././S01-Numeration-entiere/Ex-4-Numeration-Additions.pdf">Ex-4-Numeration-Additions.pdf</a><br>
-	├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/">S02-Notions-de-Geométrie</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
-	│   └── <a href="././S02-Notions-de-Geom%FFFFFFC3%FFFFFFA9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
+	├── <a href="././S02-Notions-de-Geometrie/">S02-Notions-de-Geometrie</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/Cours-S02-Notions-Geometrie.pdf">Cours-S02-Notions-Geometrie.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1b-.pdf">EX-1b-.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1-.pdf">EX-1-.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-2-.pdf">EX-2-.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-3-.pdf">EX-3-.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-4-.pdf">EX-4-.pdf</a><br>
+	│   └── <a href="././S02-Notions-de-Geometrie/EX-5-.pdf">EX-5-.pdf</a><br>
 	├── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
 	│   ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	│   ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
