--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -38,7 +38,12 @@
 	│   └── <a href="././S01-Relatifs/Ex-5-Relatifs-Problemes.pdf">Ex-5-Relatifs-Problemes.pdf</a><br>
 	├── <a href="././S02-Pythagore/">S02-Pythagore</a><br>
 	│   ├── <a href="././S02-Pythagore/Cours-4-S02-Pythagore.pdf">Cours-4-S02-Pythagore.pdf</a><br>
-	│   └── <a href="././S02-Pythagore/DS1-4-S02-Pythagore.pdf">DS1-4-S02-Pythagore.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/DS1-4-S02-Pythagore.pdf">DS1-4-S02-Pythagore.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Ex-1-S02-Pythagore-Racine-Carre.pdf">Ex-1-S02-Pythagore-Racine-Carre.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Ex-2-S02-Pythagore-Hypothenuse.pdf">Ex-2-S02-Pythagore-Hypothenuse.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Ex-3-S02-Pythagore-Egalite.pdf">Ex-3-S02-Pythagore-Egalite.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Ex-4-S02-Pythagore-Calcul.pdf">Ex-4-S02-Pythagore-Calcul.pdf</a><br>
+	│   └── <a href="././S02-Pythagore/Ex-5-S02-Pythagore-Problemes.pdf">Ex-5-S02-Pythagore-Problemes.pdf</a><br>
 	├── <a href="././S03-Produits-de-Relatifs/">S03-Produits-de-Relatifs</a><br>
 	│   ├── <a href="././S03-Produits-de-Relatifs/Ex-1-Relatifs-Signe-Du-Produit.pdf">Ex-1-Relatifs-Signe-Du-Produit.pdf</a><br>
 	│   └── <a href="././S03-Produits-de-Relatifs/Ex-2-Relatifs-Additions-Soustractions.pdf">Ex-2-Relatifs-Additions-Soustractions.pdf</a><br>
