--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -42,6 +42,7 @@
 	│   ├── <a href="././S02-Pythagore/Ex-1-S02-Pythagore-Racine-Carre.pdf">Ex-1-S02-Pythagore-Racine-Carre.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-2-S02-Pythagore-Hypothenuse.pdf">Ex-2-S02-Pythagore-Hypothenuse.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-3-S02-Pythagore-Egalite.pdf">Ex-3-S02-Pythagore-Egalite.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/Ex-4a-S02-Calcul.pdf">Ex-4a-S02-Calcul.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-4-S02-Pythagore-Calcul.pdf">Ex-4-S02-Pythagore-Calcul.pdf</a><br>
 	│   └── <a href="././S02-Pythagore/Ex-5-S02-Pythagore-Problemes.pdf">Ex-5-S02-Pythagore-Problemes.pdf</a><br>
 	├── <a href="././S03-Produits-de-Relatifs/">S03-Produits-de-Relatifs</a><br>
