--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -39,6 +39,8 @@
 	├── <a href="././S02-Pythagore/">S02-Pythagore</a><br>
 	│   ├── <a href="././S02-Pythagore/Cours-4-S02-Pythagore.pdf">Cours-4-S02-Pythagore.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/DS1-4-S02-Pythagore.pdf">DS1-4-S02-Pythagore.pdf</a><br>
+	│   ├── <a href="././S02-Pythagore/%23DS-1-S02-Pythagore.tex%23">#DS-1-S02-Pythagore.tex#</a><br>
+	│   ├── <a href="././S02-Pythagore/DS-2-S02-Bilan.pdf">DS-2-S02-Bilan.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-1-S02-Pythagore-Racine-Carre.pdf">Ex-1-S02-Pythagore-Racine-Carre.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-2-S02-Pythagore-Hypothenuse.pdf">Ex-2-S02-Pythagore-Hypothenuse.pdf</a><br>
 	│   ├── <a href="././S02-Pythagore/Ex-3-S02-Pythagore-Egalite.pdf">Ex-3-S02-Pythagore-Egalite.pdf</a><br>
