--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -34,10 +34,11 @@
 	│   └── <a href="././S01-Numeration-entiere/Ex-4-Numeration-Additions.pdf">Ex-4-Numeration-Additions.pdf</a><br>
 	├── <a href="././S02-Notions-de-Geometrie/">S02-Notions-de-Geometrie</a><br>
 	│   ├── <a href="././S02-Notions-de-Geometrie/Cours-S02-Notions-Geometrie.pdf">Cours-S02-Notions-Geometrie.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1b-.pdf">EX-1b-.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1-.pdf">EX-1-.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geometrie/EX-2-.pdf">EX-2-.pdf</a><br>
-	│   ├── <a href="././S02-Notions-de-Geometrie/EX-3-.pdf">EX-3-.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/DS-1-S02-Droites-Segments.pdf">DS-1-S02-Droites-Segments.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1a-Droites-Segments.pdf">EX-1a-Droites-Segments.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-1b-Droites-Segments.pdf">EX-1b-Droites-Segments.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-3-Allignement-Appartenance.pdf">EX-3-Allignement-Appartenance.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-Geometrie/EX-4-Bilan.pdf">EX-4-Bilan.pdf</a><br>
 	│   ├── <a href="././S02-Notions-de-Geometrie/EX-4-.pdf">EX-4-.pdf</a><br>
 	│   └── <a href="././S02-Notions-de-Geometrie/EX-5-.pdf">EX-5-.pdf</a><br>
 	├── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
