--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -48,8 +48,17 @@
 	│   ├── <a href="././S02-Pythagore/Ex-4-S02-Pythagore-Calcul.pdf">Ex-4-S02-Pythagore-Calcul.pdf</a><br>
 	│   └── <a href="././S02-Pythagore/Ex-5-S02-Pythagore-Problemes.pdf">Ex-5-S02-Pythagore-Problemes.pdf</a><br>
 	├── <a href="././S03-Produits-de-Relatifs/">S03-Produits-de-Relatifs</a><br>
-	│   ├── <a href="././S03-Produits-de-Relatifs/Ex-1-Relatifs-Signe-Du-Produit.pdf">Ex-1-Relatifs-Signe-Du-Produit.pdf</a><br>
-	│   └── <a href="././S03-Produits-de-Relatifs/Ex-2-Relatifs-Additions-Soustractions.pdf">Ex-2-Relatifs-Additions-Soustractions.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/Cours-S03-Produits-Quotients-de-Relatifs.pdf">Cours-S03-Produits-Quotients-de-Relatifs.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/DS1-S03-Signes.pdf">DS1-S03-Signes.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/DS2-S03-Op%FFFFFFC3%FFFFFFA9rations-Simples.pdf">DS2-S03-Opérations-Simples.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX1-S03-Signe-produit.pdf">EX1-S03-Signe-produit.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX2-S03-Signe-quotient.pdf">EX2-S03-Signe-quotient.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX3-S03-Signe-Expression.pdf">EX3-S03-Signe-Expression.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX4-S03-Produits-Simples.pdf">EX4-S03-Produits-Simples.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX5-S03-Quotients-Simples.pdf">EX5-S03-Quotients-Simples.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX6-S03-M%FFFFFFC3%FFFFFFA9langes.pdf">EX6-S03-Mélanges.pdf</a><br>
+	│   ├── <a href="././S03-Produits-de-Relatifs/EX7-S03-Exercices-Difficiles.pdf">EX7-S03-Exercices-Difficiles.pdf</a><br>
+	│   └── <a href="././S03-Produits-de-Relatifs/EXBonus-S03.pdf">EXBonus-S03.pdf</a><br>
 	├── <a href="././S04-fractions/">S04-fractions</a><br>
 	│   ├── <a href="././S04-fractions/Cours-4-S04-Operation-sur-les-Fractions.pdf">Cours-4-S04-Operation-sur-les-Fractions.pdf</a><br>
 	│   ├── <a href="././S04-fractions/Ex-1-Fractions-Egales.pdf">Ex-1-Fractions-Egales.pdf</a><br>
