--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -59,10 +59,12 @@
 	│   ├── <a href="././S03-Produits-de-Relatifs/EX6-S03-M%FFFFFFC3%FFFFFFA9langes.pdf">EX6-S03-Mélanges.pdf</a><br>
 	│   ├── <a href="././S03-Produits-de-Relatifs/EX7-S03-Exercices-Difficiles.pdf">EX7-S03-Exercices-Difficiles.pdf</a><br>
 	│   └── <a href="././S03-Produits-de-Relatifs/EXBonus-S03.pdf">EXBonus-S03.pdf</a><br>
-	├── <a href="././S04-fractions/">S04-fractions</a><br>
-	│   ├── <a href="././S04-fractions/Cours-4-S04-Operation-sur-les-Fractions.pdf">Cours-4-S04-Operation-sur-les-Fractions.pdf</a><br>
-	│   ├── <a href="././S04-fractions/Ex-1-Fractions-Egales.pdf">Ex-1-Fractions-Egales.pdf</a><br>
-	│   └── <a href="././S04-fractions/Ex-2-Fractions-Additions-Soustractions.pdf">Ex-2-Fractions-Additions-Soustractions.pdf</a><br>
+	├── <a href="././S04-Operations-Fractions/">S04-Operations-Fractions</a><br>
+	│   ├── <a href="././S04-Operations-Fractions/Cours-4-S04-Operation-sur-les-Fractions.pdf">Cours-4-S04-Operation-sur-les-Fractions.pdf</a><br>
+	│   ├── <a href="././S04-Operations-Fractions/DS-1-S04-QCM-Fractions.pdf">DS-1-S04-QCM-Fractions.pdf</a><br>
+	│   ├── <a href="././S04-Operations-Fractions/Ex-1-Fractions-Egales.pdf">Ex-1-Fractions-Egales.pdf</a><br>
+	│   ├── <a href="././S04-Operations-Fractions/Ex-2-Fractions-Additions-Soustractions.pdf">Ex-2-Fractions-Additions-Soustractions.pdf</a><br>
+	│   └── <a href="././S04-Operations-Fractions/Ex-3-S04-Muliplications.pdf">Ex-3-S04-Muliplications.pdf</a><br>
 	├── <a href="././S05-Pythagore-reciproque/">S05-Pythagore-reciproque</a><br>
 	│   ├── <a href="././S05-Pythagore-reciproque/Cours-4-S05-Reciproque-Pythagore.pdf">Cours-4-S05-Reciproque-Pythagore.pdf</a><br>
 	│   ├── <a href="././S05-Pythagore-reciproque/DSA-4-S05-Reciproque-Pythagore.pdf">DSA-4-S05-Reciproque-Pythagore.pdf</a><br>
