--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -63,6 +63,7 @@
 	│   ├── <a href="././S04-Cercle/15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/16.FA-06-S04-Tracer-Arcs.pdf">16.FA-06-S04-Tracer-Arcs.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/19.FA-09-S04-Programmes-de-constructions.pdf">19.FA-09-S04-Programmes-de-constructions.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet2.pdf">20.Activité-Perroquet2.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
 	│   └── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
