--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -65,7 +65,9 @@
 	│   ├── <a href="././S04-Cercle/19.FA-09-S04-Programmes-de-constructions.pdf">19.FA-09-S04-Programmes-de-constructions.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/20.Activit%FFFFFFC3%FFFFFFA9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
 	│   ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
-	│   └── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
+	│   ├── <a href="././S04-Cercle/DS-1-Cercle.odg">DS-1-Cercle.odg</a><br>
+	│   └── <a href="././S04-Cercle/DS-1-Cercle.pdf">DS-1-Cercle.pdf</a><br>
 	├── <a href="././S05-Positions-relatives-de-droites/">S05-Positions-relatives-de-droites</a><br>
 	│   ├── <a href="././S05-Positions-relatives-de-droites/01.FM-6-S09.pdf">01.FM-6-S09.pdf</a><br>
 	│   ├── <a href="././S05-Positions-relatives-de-droites/6_E06_Droites_paralleles_perpendiculaires.pdf">6_E06_Droites_paralleles_perpendiculaires.pdf</a><br>
