--- a/Quatrieme/index.html
+++ b/Quatrieme/index.html
@@ -67,9 +67,10 @@
 	│   └── <a href="././S04-Operations-Fractions/Ex-3-S04-Muliplications.pdf">Ex-3-S04-Muliplications.pdf</a><br>
 	├── <a href="././S05-Pythagore-reciproque/">S05-Pythagore-reciproque</a><br>
 	│   ├── <a href="././S05-Pythagore-reciproque/Cours-4-S05-Reciproque-Pythagore.pdf">Cours-4-S05-Reciproque-Pythagore.pdf</a><br>
-	│   ├── <a href="././S05-Pythagore-reciproque/DSA-4-S05-Reciproque-Pythagore.pdf">DSA-4-S05-Reciproque-Pythagore.pdf</a><br>
+	│   ├── <a href="././S05-Pythagore-reciproque/DS-4-S05-Reciproque-Pythagore.pdf">DS-4-S05-Reciproque-Pythagore.pdf</a><br>
 	│   ├── <a href="././S05-Pythagore-reciproque/Ex-1-Rappels-Egalite.pdf">Ex-1-Rappels-Egalite.pdf</a><br>
-	│   └── <a href="././S05-Pythagore-reciproque/Ex-1-Rappels.pdf">Ex-1-Rappels.pdf</a><br>
+	│   ├── <a href="././S05-Pythagore-reciproque/Ex-2-Reciproques.pdf">Ex-2-Reciproques.pdf</a><br>
+	│   └── <a href="././S05-Pythagore-reciproque/Ex-3-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-3-Problèmes.pdf</a><br>
 	├── <a href="././S06-Satistiques/">S06-Satistiques</a><br>
 	│   ├── <a href="././S06-Satistiques/stats-etendues.pdf">stats-etendues.pdf</a><br>
 	│   ├── <a href="././S06-Satistiques/stats-medianes.pdf">stats-medianes.pdf</a><br>
